[tool.poetry]
name = "musquery"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mutagen = "^1.46.0"
apsw = "^3.40.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
